syntax = "proto3";

import "bottle/inventory/v1/service.proto";

package bottle.inventory;

service V1 {
  rpc ListComponentAvailability(bottle.inventory.v1.ListComponentAvailabilityRequest) returns (stream bottle.inventory.v1.ListComponentAvailabilityResponse);

  rpc ListSkuQuantity(bottle.inventory.v1.ListSkuQuantityRequest) returns (stream bottle.inventory.v1.ListSkuQuantityResponse);
  rpc ListSkuAvailability(bottle.inventory.v1.ListSkuAvailabilityRequest) returns (stream bottle.inventory.v1.ListSkuAvailabilityResponse);
  rpc GetSkuDetails(bottle.inventory.v1.GetSkuDetailsRequest) returns (bottle.inventory.v1.GetSkuDetailsResponse);

  rpc ListLocations(bottle.inventory.v1.ListLocationsRequest) returns (stream bottle.inventory.v1.ListLocationsResponse);
}
